--- a/roles/elastic/bootstrap/tasks/main.yml
+++ b/roles/elastic/bootstrap/tasks/main.yml
@@ -1,71 +1,76 @@
 ---
 # tasks file for bootstrap
 
-- name: elastic_pw
-  delegate_to: localhost
-  set_fact:
-    pw: "{{ lookup('file', '{{ local_install_dir }}/{{ es_clustername }}/security') }}"
-  when: es_security == true  
-  tags:
-    - bootstrap
+- name: bootstrap various template users and roles
+  block:
 
-- name: elastic_pw
-  delegate_to: localhost
-  set_fact:
-    elastic_pw: "{{ pw |string | regex_search('elastic = ([a-zA-Z0-9]*)', '\\1') | first}}"
-  when: es_security == true  
-  tags:
-    - bootstrap
+  - name: elastic_pw
+    delegate_to: localhost
+    set_fact:
+      pw: "{{ lookup('file', '{{ local_install_dir }}/{{ es_clustername }}/security') }}"
+    when: es_security == true  
+    tags:
+      - bootstrap
 
-- debug: msg="the value of elastic is {{ elastic_pw }}"
-  when: es_security == true  
-  tags:
-    - bootstrap
+  - name: elastic_pw
+    delegate_to: localhost
+    set_fact:
+      elastic_pw: "{{ pw |string | regex_search('elastic = ([a-zA-Z0-9]*)', '\\1') | first}}"
+    when: es_security == true  
+    tags:
+      - bootstrap
 
-- name : Find security/role/*.json
-  delegate_to: localhost
-  become: true
-  find:
-    paths: "{{ local_install_root }}/roles/elastic/bootstrap/files/_security/role"
-    file_type: file
-  register: roles
+  - debug: msg="the value of elastic is {{ elastic_pw }}"
+    when: es_security == true  
+    tags:
+      - bootstrap
 
-- debug: var=item.path
-  with_items: "{{ roles.files }}"
+  - name : Find security/role/*.json
+    delegate_to: localhost
+    become: true
+    find:
+      paths: "{{ local_install_root }}/roles/elastic/bootstrap/files/_security/role"
+      file_type: file
+    register: roles
 
-- name: Create role 
-  delegate_to: localhost
-  uri:
-    url: "https://{{ansible_hostname}}:9200/_security/role"
-    user: "elastic"
-    password: "{{ elastic_pw}}"
-    method: PUT
-    body: "{{ lookup('file','{{ item.path}}') }}"
-    force_basic_auth: yes
-    status_code: 201
-    body_format: json
-  with_items: "{{ roles.files}}"
+  - debug: var=item.path
+    with_items: "{{ roles.files }}"
 
-- name : Find security/user/*.json
-  delegate_to: localhost
-  become: true
-  find:
-    paths: "{{ local_install_root }}/roles/elastic/bootstrap/files/_security/user"
-    file_type: file
-  register: users
+  - name: Create role 
+    delegate_to: localhost
+    uri:
+      url: "https://{{ansible_hostname}}:9200/_security/role/{{ item.path | regex_search('([\w]+)\.json$', '\\1') | first}}"
+      user: "elastic"
+      password: "{{ elastic_pw}}"
+      method: PUT
+      body: "{{ lookup('file','{{ item.path}}') }}"
+      force_basic_auth: yes
+      status_code: 201
+      body_format: json
+    with_items: "{{ roles.files}}"
 
-- debug: var=item.path
-  with_items: "{{ users.files }}"  
+  - name : Find security/user/*.json
+    delegate_to: localhost
+    become: true
+    find:
+      paths: "{{ local_install_root }}/roles/elastic/bootstrap/files/_security/user"
+      file_type: file
+    register: users
 
-- name: Create user
-  delegate_to: localhost
-  uri:
-    url: "https://{{ansible_hostname}}:9200/_security/user"
-    user: "elastic"
-    password: "{{ elastic_pw}}"
-    method: PUT
-    body: "{{ lookup('file','{{ item.path}}') }}"
-    force_basic_auth: yes
-    status_code: 201
-    body_format: json
-  with_items: "{{ users.files}}"
+  - debug: var=item.path
+    with_items: "{{ users.files }}"  
+
+  - name: Create user
+    delegate_to: localhost
+    uri:
+      url: "https://{{ansible_hostname}}:9200/_security/user/{{ item.path | regex_search('([\w]+)\.json$', '\\1') | first}}"
+      user: "elastic"
+      password: "{{ elastic_pw}}"
+      method: PUT
+      body: "{{ lookup('file','{{ item.path}}') }}"
+      force_basic_auth: yes
+      status_code: 201
+      body_format: json
+    with_items: "{{ users.files}}"
+
+  when: es_bootstrap == true
