--- a/roles/elastic/bootstrap/tasks/main.yml
+++ b/roles/elastic/bootstrap/tasks/main.yml
@@ -47,6 +47,7 @@
       force_basic_auth: yes
       status_code: 201
       body_format: json
+      ca_path: "{{ local_install_dir}}/{{ es_clustername}}/certs/{{ er_rootca}}.crt"
     with_items: "{{ roles.files}}"
 
   - name : Find security/user/*.json
@@ -71,6 +72,7 @@
       force_basic_auth: yes
       status_code: 201
       body_format: json
+      ca_path: "{{ local_install_dir}}/{{ es_clustername}}/certs/{{ er_rootca}}.crt"
     with_items: "{{ users.files}}"
 
   when: es_bootstrap == true
