--- a/roles/kibana/bootstrap/tasks/main.yml
+++ b/roles/kibana/bootstrap/tasks/main.yml
@@ -47,6 +47,8 @@
       force_basic_auth: yes
       status_code: 200
       body_format: json
+      headers:
+        kbn-xrsf: "kibana" 
     with_items: "{{ spaces.files}}"
 
   when: es_bootstrap == true
