--- a/roles/kibana/bootstrap/tasks/main.yml
+++ b/roles/kibana/bootstrap/tasks/main.yml
@@ -13,6 +13,11 @@
       - bootstrap
 
 
+  - name: Wait for port 443 to become open on the host, don't start checking for 10 seconds
+    wait_for:
+      port: 443
+      delay: 10
+
   - name: elastic_pw
     delegate_to: localhost
     set_fact:
