--- a/roles/elastic/security/tasks/main.yml
+++ b/roles/elastic/security/tasks/main.yml
@@ -19,6 +19,16 @@
   tags:
     - security
 
+
+- name: Wait for port 9200 to become open on the host, don't start checking for 10 seconds
+  wait_for:
+    port: 9200
+    delay: 10
+  tags:
+    - security
+
+
+
 - name: Run command if security does not exist
 #  shell: printf "Y"|bin/elasticsearch-setup-passwords auto | grep PASSWORD > "/tmp/{{ es_clustername }}-security"
   shell: printf "Y"|bin/elasticsearch-setup-passwords auto  | grep PASSWORD
