--- a/roles/kibana/bootstrap/tasks/main.yml
+++ b/roles/kibana/bootstrap/tasks/main.yml
@@ -15,7 +15,7 @@
 
   - name: Wait for port 443 to become open on the host, don't start checking for 10 seconds
     wait_for:
-      port: 443
+      port: "{{kbn_private_port}}"
       delay: 10
 
   - name: elastic_pw
