--- a/roles/kibana/bootstrap/tasks/main.yml
+++ b/roles/kibana/bootstrap/tasks/main.yml
@@ -63,6 +63,8 @@
       body_format: json
       headers:
         kbn-xsrf: "kibana" 
+    retries: 30
+    delay: 30        
     with_items: "{{ spaces.files}}"
 
   when: es_bootstrap == true
