--- a/roles/pacemaker/install/tasks/main.yml
+++ b/roles/pacemaker/install/tasks/main.yml
@@ -5,7 +5,7 @@
   yum:
      name: "{{ item }}"
      state: present        
-  items:
+  with_items:
     - pcs
     - fence-agents-all   
   tags:
