--- a/inventories/group_vars/rsyslog.yml
+++ b/inventories/group_vars/rsyslog.yml
@@ -1,9 +1,6 @@
-rs_user: "rsyslog"
-rs_group: "rsyslog"
-rs_home: "/opt/rsyslog"
 rs_conf: "/etc/rsyslog"
 rs_log_dir: "/var/log/rsyslog"
-rs_port: "9092"
-rs_port_repl: "9093"
+rs_tcp_port: "514"
+rs_udp_port: "514"
 rs_data_path: "{{ mount_logical_volume}}/rsyslog"
 rs_config_file: "server.properties.j2"
