--- a/inventories/group_vars/rsyslog.yml
+++ b/inventories/group_vars/rsyslog.yml
@@ -3,4 +3,4 @@ rs_log_dir: "/var/log/rsyslog"
 rs_tcp_port: "514"
 rs_udp_port: "514"
 rs_data_path: "{{ mount_logical_volume}}/rsyslog"
-rs_config_file: "server.properties.j2"
+rs_syslog_conf: "rsyslog.conf.j2"
