--- a/roles/sshkeys/configure/tasks/main.yml
+++ b/roles/sshkeys/configure/tasks/main.yml
@@ -1,2 +1,20 @@
 ---
 # tasks file for configure
+
+- name: run ssh-keyscan 
+  delegate_to: localhost
+  shell:  "ssh-keyscan -t ssh-rsa  {{ ansible_hostname}} >> {{MY_KNOWN_HOSTS}}"
+  tags:
+    - configure
+
+- name: run ssh-keyscan 
+  delegate_to: only unique
+  shell:  "sort {{MY_KNOWN_HOSTS}} | uniq > {{MY_KNOWN_HOSTS}}.uniq"
+  tags:
+    - configure
+
+- name: run ssh-keyscan 
+  delegate_to: localhost
+  shell:  "mv {{MY_KNOWN_HOSTS}}{.uniq,}"
+  tags:
+    - configure        
