--- a/roles/sshkeys/install/tasks/main.yml
+++ b/roles/sshkeys/install/tasks/main.yml
@@ -15,7 +15,7 @@
   ansible.builtin.lineinfile:
     path: "{{ MY_KNOWN_HOSTS}}"
     state: absent
-    regexp: '^{{ hostvars[inventory_hostname]['ansible_default_ipv4']['address'] }}'
+    regexp: '^{{ hostvars[inventory_hostname][ansible_default_ipv4][address] }}'
   tags: 
     - install  
 
