--- a/roles/sshkeys/configure/tasks/main.yml
+++ b/roles/sshkeys/configure/tasks/main.yml
@@ -7,6 +7,12 @@
   tags:
     - configure
 
+- name: run ssh-keyscan 
+  delegate_to: localhost
+  shell:  "ssh-keyscan -t ssh-rsa  {{ hostvars[inventory_hostname]['ansible_default_ipv4']['address']  }} >> {{MY_KNOWN_HOSTS}}"
+  tags:
+    - configure
+
 - name: only unique
   delegate_to: localhost
   shell:  "sort {{MY_KNOWN_HOSTS}} | uniq > {{MY_KNOWN_HOSTS}}.uniq"
