--- a/roles/kubernetes/firewall/tasks/main.yml
+++ b/roles/kubernetes/firewall/tasks/main.yml
@@ -1,2 +1,37 @@
 ---
-# tasks file for firewall
+
+- name: Install firewalld
+  ansible.builtin.package:
+    name: firewalld
+    state: present
+  tags:
+    - install
+
+- name: Start and enable firewalld
+  ansible.builtin.service:
+    name: firewalld
+    state: started
+    enabled: yes
+  tags:
+    - install
+
+- name: Configure firewalld on master nodes
+  ansible.posix.firewalld:
+    port: "{{ item }}/tcp"
+    permanent: yes
+    state: enabled
+  with_items: '{{ k8s_master_ports }}'
+  when: "k8_role_master is true"
+  tags:
+    - install
+
+- name: Configure firewalld on worker nodes
+  ansible.posix.firewalld:
+    port: "{{ item }}/tcp"
+    permanent: yes
+    state: enabled
+  with_items: '{{ k8s_worker_ports }}'
+  when: (k8_role_node is true or k8_role_worker is true)
+  tags:
+    - install
+
