--- a/roles/kubernetes/install/tasks/main.yml
+++ b/roles/kubernetes/install/tasks/main.yml
@@ -1,2 +1,11 @@
 ---
 # tasks file for install
+- name: Install kubernetes packages
+  yum:
+    name: [kubelet,kubeadm,kubectl]
+    disable_excludes: kubernetes
+
+- name: Enable kubelet service
+  ansible.builtin.service:
+    name: kubelet
+    enabled: yes
