--- a/roles/kubernetes/requirements/tasks/main.yml
+++ b/roles/kubernetes/requirements/tasks/main.yml
@@ -5,13 +5,5 @@
   ansible.builtin.template:
     src: 'kubernetes.repo.j2'
     dest: /etc/yum.repos.d/kubernetes.repo
-
-- name: Install kubernetes packages
-  yum:
-    name: [kubelet,kubeadm,kubectl]
-    disable_excludes: kubernetes
-
-- name: Enable kubelet service
-  ansible.builtin.service:
-    name: kubelet
-    enabled: yes
+  tags:
+    - requirements    
