--- a/inventories/group_vars/kubernetes.yml
+++ b/inventories/group_vars/kubernetes.yml
@@ -1,3 +1,22 @@
 k8_role_master: false
 k8_role_worker: false
 k8_role_node: false
+
+# Master nodes firewall ports
+k8s_master_ports:
+    - 22
+    - 80
+    - 443
+    - 6443
+    - 2379-2380
+    - 10250
+    - 10251
+    - 10252
+
+# Worker nodes firewall ports
+k8s_worker_ports:
+    - 22
+    - 80
+    - 443
+    - 10250
+    - 30000-32767
