--- a/roles/kubernetes/firewall/tasks/main.yml
+++ b/roles/kubernetes/firewall/tasks/main.yml
@@ -42,6 +42,9 @@
   modprobe:
     name: br_netfiler
     state: present    
+  when: "k8_role_master == true"
+  tags:
+    - install
 
 - name: bridge-nf-call-iptables
   shell: 
