--- a/roles/kubernetes/install/tasks/main.yml
+++ b/roles/kubernetes/install/tasks/main.yml
@@ -3,8 +3,8 @@
 
 
 - name: Disable SWAP since kubernetes can't work with swap enabled (1/2)
-  shell: |
-    swapoff -a
+  shell: 
+    cmd: "swapoff -a"
   tags:
     - install  
 
