--- a/roles/kubernetes/install/tasks/main.yml
+++ b/roles/kubernetes/install/tasks/main.yml
@@ -51,6 +51,7 @@
   ansible.builtin.service:
     name: docker
     enabled: yes
+    started: yes
   notify: start docker
   tags:
     - install  
