--- a/roles/kubernetes/install/tasks/main.yml
+++ b/roles/kubernetes/install/tasks/main.yml
@@ -88,3 +88,29 @@
   tags:
     - install
 
+- name: save kubeadmini facts to host specific file
+  copy:
+    content: "{{ kubeadminit.stdout_lines }}"
+    dest: "/tmp/kubeadminit"
+  when: k8_role_master == true
+  tags:
+    - install
+
+- name: Fetch kubeadminit
+  ansible.builtin.fetch:
+    src: "/tmp/kubeadminit"
+    dest: "{{ local_install_dir }}/kubeadminit"
+    flat: true
+  when: k8_role_master == true
+  tags:
+    - install
+
+- name: remove kubeadmini
+  file:
+    path: "/tmp/kubeadminit"
+    state: absent
+  when: k8_role_master == true
+  tags:
+    - install
+
+
