--- a/inventories/group_vars/kubernetes.yml
+++ b/inventories/group_vars/kubernetes.yml
@@ -1,6 +1,7 @@
 k8_role_master: false
 k8_role_worker: false
 k8_role_node: false
+k8_cluster_name: "mykubernetescluster"
 
 # Master nodes firewall ports
 k8s_master_ports:
