--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -71,4 +71,14 @@
     tags:
       - configure
 
+  - name: run kubeadm
+    shell: 
+      cmd: "kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml"
+    when: k8_podnet_flannel == true
+
+    tags:
+      - configure
+
+      
+
   when: k8_role_master == true
