--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -71,7 +71,7 @@
     tags:
       - configure
 
-  - name: run kubeadm
+  - name: install flannel
     shell: 
       cmd: "kubectl apply -f https://github.com/coreos/flannel/raw/master/Documentation/kube-flannel.yml"
     when: k8_podnet_flannel == true
