--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -95,7 +95,7 @@
   - name: join_command
     delegate_to: localhost
     set_fact:
-      join_cmd: "{{ join |string | regex_search('kubeadm join (\\.*)', '\\1') | first}}"
+      join_cmd: "{{ join |string | regex_search('kubeadm join (\\.*)', '\\1') }}"
     tags:
       - configure
       - worker
