--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -95,12 +95,12 @@
   - name: join_command
     delegate_to: localhost
     set_fact:
-      join_cmd: "{{ join |string | regex_search('kubeadm join (\\.*)', '\\1') }}"
+      join_cmd: "{{ join |string | regex_search('kubeadm join (.*)', '\\1') |first }}"
     tags:
       - configure
       - worker
 
-  - debug: msg="the value of join is {{ join_cmd }} {{join}}"
+  - debug: msg="the value of join is {{ join_cmd }}"
     tags:
       - configure
       - worker
