--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -95,13 +95,13 @@
   - name: join_command
     delegate_to: localhost
     set_fact:
-      join_cmd: "{{ join |string | regex_search('kubeadm join ([0-9\\.\\:]*) --token ([a-z0-9\\.]*) ', '\\1','\\2') }}"
+      join_cmd: "{{ join |string | regex_search('kubeadm join ([0-9\\.\\:]*) --token ([a-z0-9\\.]*) .+sha256:([a-z0-9]*) ', '\\1','\\2','\\3') }}"
       # join_cmd: "{{ join |string | regex_search('kubeadm join ([0-9\\.\\:]*) --token ([a-z0-9\\.]*) .+sha256:([a-z0-9]*) , '\\1')  }}"
     tags:
       - configure
       - worker
 
-  - debug: msg="the value of join is {{ join_cmd[0] }} {{ join_cmd[1] }}"
+  - debug: msg="the value of join is {{ join_cmd[0] }} {{ join_cmd[1] }} {{ join_cmd[2] }}"
     tags:
       - configure
       - worker
