--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -106,12 +106,12 @@
       - configure
       - worker
 
-  #  - name: run kubeadm join
-  #    shell: 
-  #      cmd: "kubeadm join 192.168.0.47:6443 --token nu06lu.xrsux0ss0ixtnms5 –discovery token-ca-cert-hash sha256:f996ea35r4353d342fdea2997a1cf8caeddafd6d4360d606dbc82314683478hjmf7"
-  #    tags:
-  #      - configure
-  #      - worker
+   - name: run kubeadm join
+     shell: 
+       cmd: "kubeadm join {{ join_cmd[0]}} --token {{ join_cmd[1]}} --discovery-token-ca-cert-hash sha256:{{ join_cmd[2]}}"
+     tags:
+       - configure
+       - worker
 
 
   when: k8_role_worker == true
