--- a/inventories/group_vars/kubernetes.yml
+++ b/inventories/group_vars/kubernetes.yml
@@ -2,7 +2,8 @@ k8_role_master: false
 k8_role_worker: false
 k8_role_node: false
 k8_cluster_name: "mykubernetescluster"
-k8_podnet_flannel: true
+k8_podnet_flannel: false
+k8_podnet_weave: true
 
 # Master nodes firewall ports
 k8s_master_ports:
