--- a/roles/kubernetes/configure/tasks/main.yml
+++ b/roles/kubernetes/configure/tasks/main.yml
@@ -85,6 +85,29 @@
     tags:
       - configure
 
+  - name: Create pv.yaml
+    template:
+      src: pv.yaml.j2
+      dest: /opt/kubernetes/elastic-quickstart/pv.yaml
+    tags:
+      - configure  
+
+  - name: Create pvc.yaml
+    template:
+      src: pvc.yaml.j2
+      dest: /opt/kubernetes/elastic-quickstart/pvc.yaml
+    tags:
+      - configure  
+
+  - name: Create sc.yaml
+    template:
+      src: sc.yaml.j2
+      dest: /opt/kubernetes/elastic-quickstart/sc.yaml
+    tags:
+      - configure  
+
+
+
   when: k8_role_master == true
 
 
